--- a/www/package.json
+++ b/www/package.json
@@ -26,9 +26,11 @@
     "url": "https://github.com/rustwasm/create-wasm-app/issues"
   },
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
+  "dependencies": {
+    "wasm-game-of-life": "file:../pkg"
+  },
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
-    "hello-wasm-pack": "^0.1.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
